compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/unwrappedDependencies.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL

class C(val x: String)

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    <!UNINITIALIZED_PROPERTY!>val a = C(<!UNINITIALIZED_ACCESS!>B.x<!>)<!>
    <!UNINITIALIZED_PROPERTY!>val b = C(<!UNINITIALIZED_ACCESS!>a<!>.x)<!>
}

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object B<!> {
    <!UNINITIALIZED_PROPERTY!>val x: String = <!UNINITIALIZED_ACCESS!>A.b.x<!><!>
}
